--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {port_env, [
     {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRLIMIT -D_GNU_SOURCE _FILE_OFFSET_BITS=64"}
+    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"}
     ]}.
 
 {port_specs, [
