Add support for handling for signal
On Linux (and hopefully other OS'es that support signalfd), support
reliable signal handling using signalfd(2).

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {port_env, [
-    {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"}
+    {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
+    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
+    {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread"}
     ]}.
 
 {port_specs, [
