--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {port_env, [
-    {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_SIGNALFD -lpthread"}
+    {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
+    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
+    {"linux", "DRV_CFLAGS", "$DRV_CFLAGS"}
     ]}.
 
 {port_specs, [
