Use rebar3, fix compile error

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,15 @@
-{port_env, [
-    {"x86_64-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"i686-.*-linux", "DRV_CFLAGS", "$DRV_CFLAGS -DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64"},
-    {"linux", "DRV_CFLAGS", "$DRV_CFLAGS"}
+{pre_hooks, [
+    {"linux", compile, "env LD_FLAGS=\"-DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64\" make -C c_src"}
     ]}.
 
-{port_specs, [
-    {"priv/perc.so", ["c_src/perc.c"]}
+{post_hooks, [
+    {"linux", clean, "make -C c_src clean"}
     ]}.
+
+{dialyzer, [
+    {warnings, [
+        unmatched_returns,
+        error_handling,
+        race_conditions,
+        underspecs
+    ]}]}.
