erlfmt: add plugin and re-format

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,11 @@
 {pre_hooks, [
-    {"linux", compile, "env LD_FLAGS=\"-DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64\" make -C c_src"}
-    ]}.
+    {"linux", compile,
+        "env LD_FLAGS=\"-DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64\" make -C c_src"}
+]}.
 
 {post_hooks, [
     {"linux", clean, "make -C c_src clean"}
-    ]}.
+]}.
 
 {dialyzer, [
     {warnings, [
@@ -12,4 +13,9 @@
         error_handling,
         race_conditions,
         underspecs
-    ]}]}.
+    ]}
+]}.
+
+{project_plugins, [erlfmt]}.
+
+{erlfmt, [write]}.
