--- a/rebar.config
+++ b/rebar.config
@@ -7,6 +7,23 @@
     {"linux", clean, "make -C c_src clean"}
 ]}.
 
+{profiles, [
+    {docs, [
+        {deps, [
+            {edown, "0.8.1"}
+        ]},
+        {edoc_opts, [
+            {report_missing_types, true},
+            {doclet, edown_doclet},
+            {pretty_printer, erl_pp},
+            {src_path, ["src/"]},
+            {stylesheet, ""},
+            {image, ""},
+            {app_default, "http://www.erlang.org/doc/man"}
+        ]}
+    ]}
+]}.
+
 {dialyzer, [
     {warnings, [
         unmatched_returns,
