--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -12,35 +12,40 @@ C_SRC_DIR = $(CURDIR)
 C_SRC_OUTPUT ?= $(CURDIR)/../priv/$(PROJECT).so
 
 # System type and C compiler/flags.
+CC ?= cc
 
 UNAME_SYS := $(shell uname -s)
 ifeq ($(UNAME_SYS), Darwin)
-	CC ?= cc
 	CFLAGS ?= -O3 -std=gnu99 -arch x86_64 -finline-functions -Wall -Wmissing-prototypes
-	CXXFLAGS ?= -O3 -arch x86_64 -finline-functions -Wall
 	LDFLAGS ?= -arch x86_64 -flat_namespace -undefined suppress
 else ifeq ($(UNAME_SYS), FreeBSD)
-	CC ?= cc
-	CFLAGS ?= -O3 -std=gnu99 -finline-functions -Wall -Wmissing-prototypes
-	CXXFLAGS ?= -O3 -finline-functions -Wall
+	CFLAGS ?= -O3 -finline-functions -Wall -Wmissing-prototypes \
+   -pedantic -fwrapv -D_FORTIFY_SOURCE=2 \
+    -fstack-protector-strong -Wformat -Werror=format-security \
+    -fno-strict-aliasing -Wconversion -Wshadow -Wpointer-arith \
+    -Wcast-qual
+else ifeq ($(UNAME_SYS), OpenBSD)
+	CFLAGS ?= -O3 -finline-functions -Wall -Wmissing-prototypes \
+   -pedantic -fwrapv -D_FORTIFY_SOURCE=2 \
+    -fstack-protector-strong -Wformat -Werror=format-security \
+    -fno-strict-aliasing -Wconversion -Wshadow -Wpointer-arith \
+    -Wcast-qual
 else ifeq ($(UNAME_SYS), Linux)
-	CC ?= gcc
-	CFLAGS ?= -O3 -std=gnu99 -finline-functions -Wall -Wmissing-prototypes
-	CXXFLAGS ?= -O3 -finline-functions -Wall
+	CFLAGS ?= -O3 -finline-functions -Wall -Wmissing-prototypes \
+   -pedantic -fwrapv -D_FORTIFY_SOURCE=2 \
+    -fstack-protector-strong -Wformat -Werror=format-security \
+    -fno-strict-aliasing -Wconversion -Wshadow -Wpointer-arith \
+    -Wcast-qual
 endif
 
 CFLAGS += -fPIC -I $(ERTS_INCLUDE_DIR)
-CXXFLAGS += -fPIC -I $(ERTS_INCLUDE_DIR)
 
-LDFLAGS += -shared
+LDFLAGS += -Wl,-z,relro,-z,now -Wl,-z,noexecstack -shared
 
 # Verbosity.
 
 c_verbose_0 = @echo " C     " $(?F);
 c_verbose = $(c_verbose_$(V))
-
-cpp_verbose_0 = @echo " CPP   " $(?F);
-cpp_verbose = $(cpp_verbose_$(V))
 
 link_verbose_0 = @echo " LD    " $(@F);
 link_verbose = $(link_verbose_$(V))
@@ -49,7 +54,6 @@ SOURCES := $(shell find $(C_SRC_DIR) -type f \( -name "*.c" -o -name "*.C" -o -n
 OBJECTS = $(addsuffix .o, $(basename $(SOURCES)))
 
 COMPILE_C = $(c_verbose) $(CC) $(CFLAGS) $(CPPFLAGS) -c
-COMPILE_CPP = $(cpp_verbose) $(CXX) $(CXXFLAGS) $(CPPFLAGS) -c
 
 $(C_SRC_OUTPUT): $(OBJECTS)
 	@mkdir -p $(BASEDIR)/priv/
@@ -57,15 +61,6 @@ $(C_SRC_OUTPUT): $(OBJECTS)
 
 %.o: %.c
 	$(COMPILE_C) $(OUTPUT_OPTION) $<
-
-%.o: %.cc
-	$(COMPILE_CPP) $(OUTPUT_OPTION) $<
-
-%.o: %.C
-	$(COMPILE_CPP) $(OUTPUT_OPTION) $<
-
-%.o: %.cpp
-	$(COMPILE_CPP) $(OUTPUT_OPTION) $<
 
 clean:
 	@rm -f $(C_SRC_OUTPUT) $(OBJECTS)
