--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {pre_hooks, [
     {"linux", compile,
-        "env LD_FLAGS=\"-DHAVE_PRCTL -DHAVE_PRLIMIT -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64\" make -C c_src"}
+        "env LD_FLAGS=\"-DHAVE_PRCTL -DHAVE_PRLIMIT -D_FILE_OFFSET_BITS=64\" make -C c_src"}
 ]}.
 
 {post_hooks, [
