--- a/rebar.config
+++ b/rebar.config
@@ -4,24 +4,14 @@
 ]}.
 
 {post_hooks, [
-    {"linux", clean, "make -C c_src clean"}
+    {"linux", clean, "make -C c_src clean"},
+    {edoc, "ex_doc --config .ex_doc.config --source-url \"https://github.com/msantos/perc\" --source-ref \"master\" \"perc\" `erl -noshell -s init stop -eval '{ok, [{_,_,X}]} = file:consult(\"src/perc.app.src\"), io:format(\"~s\", [proplists:get_value(vsn, X, \"0.0.0\")]).'` _build/default/lib/perc/ebin"}
 ]}.
 
-{profiles, [
-    {docs, [
-        {deps, [
-            {edown, "0.8.1"}
-        ]},
-        {edoc_opts, [
-            {report_missing_types, true},
-            {doclet, edown_doclet},
-            {pretty_printer, erl_pp},
-            {src_path, ["src/"]},
-            {stylesheet, ""},
-            {image, ""},
-            {app_default, "http://www.erlang.org/doc/man"}
-        ]}
-    ]}
+{edoc_opts, [
+    {doclet, edoc_doclet_chunks},
+    {layout, edoc_layout_chunks},
+    {dir, "_build/default/lib/perc/doc"}
 ]}.
 
 {dialyzer, [
@@ -32,7 +22,3 @@
         underspecs
     ]}
 ]}.
-
-{project_plugins, [erlfmt]}.
-
-{erlfmt, [write]}.
