--- a/rebar.config
+++ b/rebar.config
@@ -4,21 +4,24 @@
 ]}.
 
 {post_hooks, [
-    {"linux", clean, "make -C c_src clean"},
-    {edoc, "ex_doc --config .ex_doc.config --source-url \"https://github.com/msantos/perc\" --source-ref \"master\" \"perc\" `erl -noshell -s init stop -eval '{ok, [{_,_,X}]} = file:consult(\"src/perc.app.src\"), io:format(\"~s\", [proplists:get_value(vsn, X, \"0.0.0\")]).'` _build/default/lib/perc/ebin"}
-]}.
-
-{edoc_opts, [
-    {doclet, edoc_doclet_chunks},
-    {layout, edoc_layout_chunks},
-    {dir, "_build/default/lib/perc/doc"}
+    {"linux", clean, "make -C c_src clean"}
 ]}.
 
 {dialyzer, [
     {warnings, [
         unmatched_returns,
         error_handling,
-        race_conditions,
         underspecs
     ]}
 ]}.
+
+{ex_doc, [
+    {extras, [
+        {"README.md", #{title => "Overview"}},
+        "LICENSE"
+    ]},
+    {main, "README.md"},
+    {source_url, "https://github.com/msantos/perc"}
+]}.
+
+{hex, [{doc, ex_doc}]}.
